If loading the image fails for too often, stop retrying

BUG:433652
(cherry picked from commit 20a40ef938f5dd4f85fce105f0d3e86ade676fb5)